packages/optimizer/core/src/snapshots/qwik_core__test__should_disable_multiple_rules_from_single_directive.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 4877
expression: output
---
==INPUT==


		import { component$, useTask$ } from '@qwik.dev/core';

		export const useMemo$ = (qrl) => {
			useTask$(qrl);
		};

		export const App = component$(() => {
			/* @qwik-disable-next-line C05, preventdefault-passive-check */
			useMemo$(() => <button passive:click preventdefault:click onClick$={() => {}}>click</button>);
			return <div />;
		});
		
============================= test.js ==

import { useTaskQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
const q_useMemo_useTask_505mjFKN4to = /*#__PURE__*/ qrl(()=>import("./test.tsx_useMemo_useTask_505mjFKN4to"), "useMemo_useTask_505mjFKN4to");
//
export const useMemo$ = (qrl)=>{
    useTaskQrl(q_useMemo_useTask_505mjFKN4to);
};
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;AAGE,OAAO,MAAM,WAAW,CAAC;IACxB;AACD,EAAE;AAEF,OAAO,MAAM,oBAAM,0CAIhB\"}")
============================= test.tsx_App_component_useMemo_button_q_ep_click_vCuIdygdt3k.js (ENTRY POINT)==

export const App_component_useMemo_button_q_ep_click_vCuIdygdt3k = ()=>{};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"mEASuE,KAAO\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_useMemo_button_q_ep_click_vCuIdygdt3k",
  "entry": null,
  "displayName": "test.tsx_App_component_useMemo_button_q_ep_click",
  "hash": "vCuIdygdt3k",
  "canonicalFilename": "test.tsx_App_component_useMemo_button_q_ep_click_vCuIdygdt3k",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    299,
    307
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { useMemo$ } from "./test";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_App_component_useMemo_button_q_ep_click_vCuIdygdt3k = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_useMemo_button_q_ep_click_vCuIdygdt3k"), "App_component_useMemo_button_q_ep_click_vCuIdygdt3k");
//
export const App_component_ckEPmXZlub0 = ()=>{
    useMemo$(()=>/*#__PURE__*/ _jsxSorted("button", null, {
            "q-ep:click": q_App_component_useMemo_button_q_ep_click_vCuIdygdt3k
        }, "click", 3, "u6_0"));
    return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;yCAOgC;IAE7B,SAAS,kBAAM,WAAC;YAA0C,YAAQ;WAAY;IAC9E,qBAAO,WAAC;AACT\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    153,
    348
  ]
}
*/
============================= test.tsx_useMemo_useTask_505mjFKN4to.js (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
//
export const useMemo_useTask_505mjFKN4to = qrl;


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;2CAIY\"}")
/*
{
  "origin": "test.tsx",
  "name": "useMemo_useTask_505mjFKN4to",
  "entry": null,
  "displayName": "test.tsx_useMemo_useTask",
  "hash": "505mjFKN4to",
  "canonicalFilename": "test.tsx_useMemo_useTask_505mjFKN4to",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": false,
  "loc": [
    109,
    112
  ]
}
*/
== DIAGNOSTICS ==

[
  {
    "category": "error",
    "code": "C03",
    "file": "test.tsx",
    "message": "Qrl($) scope is not a function, but it's capturing local identifiers: qrl",
    "highlights": [
      {
        "lo": 109,
        "hi": 112,
        "startLine": 5,
        "startCol": 22,
        "endLine": 5,
        "endCol": 24
      }
    ],
    "suggestions": null,
    "scope": "optimizer"
  }
]
