packages/optimizer/core/src/snapshots/qwik_core__test__should_disable_passive_warning_with_qwik_disable_next_line.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 4820
expression: output
---
==INPUT==


		import { component$, sync$ } from '@qwik.dev/core';

		const PassiveOnlyComponent = component$(() => {
			return (
				<div>
					<button onClick$={sync$((event) => {
						// keep me
						event.preventDefault();
					})}>
						click
					</button>
					{/* @qwik-disable-next-line preventdefault-passive-check */}
					<button passive:click preventdefault:click onClick$={() => {}}>
						click
					</button>
				</div>
			);
		});
		
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_PassiveOnlyComponent_component_LuEXQIZuHLw = /*#__PURE__*/ qrl(()=>import("./test.tsx_PassiveOnlyComponent_component_LuEXQIZuHLw"), "PassiveOnlyComponent_component_LuEXQIZuHLw");
//
/*#__PURE__*/ componentQrl(q_PassiveOnlyComponent_component_LuEXQIZuHLw);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;cAG+B\"}")
============================= test.tsx_PassiveOnlyComponent_component_div_button_q_ep_click_w9du90RdaGA.js (ENTRY POINT)==

export const PassiveOnlyComponent_component_div_button_q_ep_click_w9du90RdaGA = ()=>{};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"gFAa0D,KAAO\"}")
/*
{
  "origin": "test.tsx",
  "name": "PassiveOnlyComponent_component_div_button_q_ep_click_w9du90RdaGA",
  "entry": null,
  "displayName": "test.tsx_PassiveOnlyComponent_component_div_button_q_ep_click",
  "hash": "w9du90RdaGA",
  "canonicalFilename": "test.tsx_PassiveOnlyComponent_component_div_button_q_ep_click_w9du90RdaGA",
  "path": "",
  "extension": "js",
  "parent": "PassiveOnlyComponent_component_LuEXQIZuHLw",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    379,
    387
  ]
}
*/
============================= test.tsx_PassiveOnlyComponent_component_LuEXQIZuHLw.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { _qrlSync } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_PassiveOnlyComponent_component_div_button_q_ep_click_w9du90RdaGA = /*#__PURE__*/ qrl(()=>import("./test.tsx_PassiveOnlyComponent_component_div_button_q_ep_click_w9du90RdaGA"), "PassiveOnlyComponent_component_div_button_q_ep_click_w9du90RdaGA");
//
export const PassiveOnlyComponent_component_LuEXQIZuHLw = ()=>{
    return /*#__PURE__*/ _jsxSorted("div", null, null, [
        /*#__PURE__*/ _jsxSorted("button", {
            "q-e:click": _qrlSync((event)=>{
                // keep me
                event.preventDefault();
            }, "event=>{event.preventDefault();}")
        }, null, "click", 2, null),
        /*#__PURE__*/ _jsxSorted("button", null, {
            "q-ep:click": q_PassiveOnlyComponent_component_div_button_q_ep_click_w9du90RdaGA
        }, "click", 3, null)
    ], 1, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;0DAG0C;IACvC,qBACC,WAAC;sBACA,WAAC;YAAO,WAAQ,WAAQ,CAAC;gBACxB,UAAU;gBACV,MAAM,cAAc;YACrB;iBAAI;sBAIJ,WAAC;YAA0C,YAAQ;WAAY;;AAKlE\"}")
/*
{
  "origin": "test.tsx",
  "name": "PassiveOnlyComponent_component_LuEXQIZuHLw",
  "entry": null,
  "displayName": "test.tsx_PassiveOnlyComponent_component",
  "hash": "LuEXQIZuHLw",
  "canonicalFilename": "test.tsx_PassiveOnlyComponent_component_LuEXQIZuHLw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    99,
    437
  ]
}
*/
== DIAGNOSTICS ==

[]
