packages/optimizer/core/src/snapshots/qwik_core__test__should_disable_qwik_transform_error_by_code.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


		import { component$, useEffect } from '@qwik.dev/core';

		export const useMemo$ = (qrt) => {
			useEffect(qrt);
		};

		export const App = component$(() => {
			/* @qwik-disable-next-line C05 */
			useMemo$(() => {
				console.log('suppressed');
			});
			return <div />;
		});
		
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useEffect } from '@qwik.dev/core';
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
//
export const useMemo$ = (qrt)=>{
    useEffect(qrt);
};
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"\\\\user\\\\qwik\\\\src\\\\test.tsx\"],\"names\":[],\"mappings\":\";;AACE,SAAqB,SAAS,QAAQ,iBAAiB;;;;AAEvD,OAAO,MAAM,WAAW,CAAC;IACxB,UAAU;AACX,EAAE;AAEF,OAAO,MAAM,oBAAM,0CAMhB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { useMemo$ } from "./test";
import { _jsxSorted } from "@qwik.dev/core";
//
export const App_component_ckEPmXZlub0 = ()=>{
    useMemo$(()=>{
        console.log('suppressed');
    });
    return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"\\\\user\\\\qwik\\\\src\\\\test.tsx\"],\"names\":[],\"mappings\":\";;;yCAOgC;IAE7B,SAAS;QACR,QAAQ,GAAG,CAAC;IACb;IACA,qBAAO,WAAC;AACT\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    155,
    280
  ]
}
*/
== DIAGNOSTICS ==

[]
